@@ -82,7 +82,7 @@
   <object id="48" template="../../obj/shop.tx" x="304" y="48">
    <properties>
     <property name="commonShopList" value="Forest"/>
-    <property name="noRestock" type="bool" value="true"/>
+    <property name="noRestock" type="bool" value="false"/>
    </properties>
   </object>
   <object id="49" template="../../obj/quest.tx" x="80" y="162" width="34" height="16">
