@@ -67,9 +67,7 @@
   <object id="48" template="../../obj/shop.tx" x="290" y="225">
    <properties>
     <property name="commonShopList" value="Plains"/>
-    <property name="noRestock" type="bool" value="true"/>
-    <property name="signXOffset" type="float" value="-32"/>
-    <property name="signYOffset" type="float" value="0"/>
+    <property name="noRestock" type="bool" value="false"/>
    </properties>
   </object>
   <object id="49" template="../../obj/shop.tx" x="304" y="306">
@@ -80,15 +78,7 @@
     <property name="uncommonShopList" value="Artifact,Knight4White,Bird4White,Soldier4White,Angel,Sliver2White,Spirit4White,Wand,Equip,Multicolor"/>
    </properties>
   </object>
-  <object id="50" template="../../obj/shop.tx" x="256" y="306">
-   <properties>
-    <property name="commonShopList" value="BoosterPackShop,AlphaBoosterPackShop,BetaBoosterPackShop,GammaBoosterPackShop,DeltaBoosterPackShop,WhiteBoosterPackShop,White,White,Enchantment4White,Creature2White,Instant4White"/>
-    <property name="mythicShopList" value="Planeswalker,WUBRG,RWG,RWU,RWB,UWG,UWB,GWB,PhyrexianWhite"/>
-    <property name="rareShopList" value="Land4White,Azorius,Boros,Selesnya,Orzhov,Vehicle,Colorless"/>
-    <property name="uncommonShopList" value="Artifact,Knight4White,Bird4White,Soldier4White,Angel,Sliver2White,Spirit4White,Wand,Equip,Multicolor"/>
-   </properties>
-  </object>
-  <object id="51" template="../../obj/shop.tx" x="192" y="306">
+  <object id="50" template="../../obj/shop.tx" x="192" y="306">
    <properties>
     <property name="commonShopList" value="Everything"/>
     <property name="mythicShopList" value=""/>
