@@ -67,7 +67,7 @@
   <object id="48" template="../../obj/shop.tx" x="290" y="225">
    <properties>
     <property name="commonShopList" value="Plains"/>
-    <property name="noRestock" type="bool" value="true"/>
+    <property name="noRestock" type="bool" value="false"/>
     <property name="signXOffset" type="float" value="-32"/>
     <property name="signYOffset" type="float" value="0"/>
    </properties>
