@@ -83,7 +83,7 @@
   <object id="48" template="../../obj/shop.tx" x="336" y="80">
    <properties>
     <property name="commonShopList" value="Swamp"/>
-    <property name="noRestock" type="bool" value="true"/>
+    <property name="noRestock" type="bool" value="false"/>
    </properties>
   </object>
   <object id="50" template="../../obj/shardtrader.tx" x="288" y="82"/>
