@@ -84,7 +84,7 @@
   <object id="48" template="../../obj/shop.tx" x="336" y="80">
    <properties>
     <property name="commonShopList" value="Swamp"/>
-    <property name="noRestock" type="bool" value="true"/>
+    <property name="noRestock" type="bool" value="false"/>
    </properties>
   </object>
   <object id="49" template="../../obj/quest.tx" x="95" y="114" width="36" height="16">
